# chainroll

./: .gitignore  Cargo.toml  README.md  Taskfile.yml
api/: Cargo.toml
api/src/: app_state.rs  application.rs  main.rs
api/src/routes/: actor_extractor.rs  employee.rs  mod.rs  tenant_extractor.rs
api/src/routes/compensation/: create.rs  errors.rs  get.rs  get_active.rs  list.rs  mod.rs  update.rs
api/src/routes/employee/: count.rs  create.rs  delete.rs  errors.rs  exists.rs  get.rs  list.rs  mod.rs  update.rs
api/src/routes/payrun/: create.rs  errors.rs  get.rs  mod.rs  preview.rs  submit_payouts.rs
api/src/routes/treasury/: create.rs  deactivate.rs  errors.rs  get.rs  list.rs  mod.rs  update.rs
api/src/utils/: settings.rs  tracing.rs
e2e-tests/: Cargo.toml  tempo-privy-payroll.env.example
e2e-tests/tests/: tempo_privy_payroll.rs
payroll-service/: .env  Cargo.toml
payroll-service/.sqlx/: query-d8e9a1362c772f5027aa09e1e28eb892bef5e8d649896c09166661b164e2d6f7.json
payroll-service/migrations/: 20260422025659_create_employees_table.sql  20260430090000_create_audit_events_table.sql  20260501034119_add_wallet_to_employee.sql  20260501090000_create_treasury_accounts_table.sql  20260502090000_create_compensation_profiles_table.sql  20260503090000_create_payruns_table.sql  20260504090000_create_payout_instructions_table.sql  20260505090000_create_payout_attempts_table.sql
payroll-service/src/: error.rs  lib.rs
payroll-service/src/domain/: audit.rs  base_metadata.rs  compensation.rs  division.rs  employee.rs  ids.rs  mod.rs  payout_attempt.rs  payout_instruction.rs  payrun.rs  query.rs  tenant.rs  treasury.rs  user.rs  wallets.rs
payroll-service/src/services/: mod.rs
payroll-service/src/services/compensation/: create.rs  get.rs  get_active_for_employee.rs  list_for_employee.rs  mod.rs  service.rs  update.rs
payroll-service/src/services/datastore/: mod.rs
payroll-service/src/services/employee/: count.rs  create.rs  create_batch.rs  create_many.rs  delete.rs  exists.rs  get.rs  list.rs  mod.rs  service.rs  update.rs
payroll-service/src/services/payout_instruction/: generate.rs  mod.rs  service.rs
payroll-service/src/services/payout_submission/: mod.rs  service.rs  submit.rs
payroll-service/src/services/payrun/: create.rs  get.rs  mod.rs  preview.rs  service.rs
payroll-service/src/services/stablecoin/: client.rs  fake.rs  (+2 more)
(+51 files in other folders)
