[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
payroll-service = { path = "../payroll-service" }
axum = "0.8.8"
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.23"
anyhow = "1"
error-stack = "0.5"