[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
payroll-service = { path = "../payroll-service", features = ["test-utils"] }
axum = "0.8.8"
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
tracing-error = "0.2.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
anyhow = "1"
error-stack = "0.5"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
thiserror = "2.0.18"
color-eyre = "0.6.5"
serde_json = "1.0.149"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
tracing = "0.1.44"
secrecy = { version = "0.10.3", features = ["serde"] }
lazy_static = "1.5.0"
dotenvy = "0.15.7"
[dev-dependencies]
axum-test = "17"