[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
privy-rs = "0.1.0-alpha"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tsid = "0.3.4"
